--- a/lab4/DESCRIPTION
+++ b/lab4/DESCRIPTION
@@ -14,6 +14,7 @@ LazyData: true
 Suggests: testthat,
     knitr,
     ggplot2,
+    ggThemeAssist,
     rmarkdown
 Depends: R (>= 2.10)
 VignetteBuilder: knitr
